Update doc comments (for better explain which constructor call based on the used hardware)

--- a/Hardware.Can.Peak/Hardware.Can.Peak.csproj
+++ b/Hardware.Can.Peak/Hardware.Can.Peak.csproj
@@ -51,5 +51,9 @@
       <Name>Hardware.Can</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Doc\pcan_library_documentation.pdf" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
