--- a/Instructions/Instructions.csproj
+++ b/Instructions/Instructions.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Get.cs" />
-    <Compile Include="Instructions.cs" />
+    <Compile Include="Instruction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Set.cs" />
     <Compile Include="Wait.cs" />
