--- a/DataStructures.Variables/DataStructures.Variables.csproj
+++ b/DataStructures.Variables/DataStructures.Variables.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DoubleVariable.cs" />
+    <Compile Include="FloatVariable.cs" />
     <Compile Include="IVariable.cs" />
     <Compile Include="Variable.cs" />
     <Compile Include="VariableDictionary.cs" />
