--- a/Instructions/Instructions.csproj
+++ b/Instructions/Instructions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Set.cs" />
     <Compile Include="Test.cs" />
+    <Compile Include="ProgramMcu.cs" />
     <Compile Include="Wait.cs" />
     <Compile Include="WaitFor.cs" />
   </ItemGroup>
@@ -58,6 +59,10 @@
     <ProjectReference Include="..\Hardware.Can\Hardware.Can.csproj">
       <Project>{12360666-20BA-42C9-BC06-5F3766B11BB7}</Project>
       <Name>Hardware.Can</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Instructions.Extensions\Instructions.Extensions.csproj">
+      <Project>{64745357-8b23-4037-8b49-e40ad95a7a46}</Project>
+      <Name>Instructions.Extensions</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
